# gsai-task

./: .gitignore  README.md  pyproject.toml
gsaiapp/: app.py  crud.py  db.py  models.py  schemas.py
testdata/: data.prq  meta.prq
tests/: test_app.py
