[tool.poetry]
name = "gsaitask"
version = "0.1.0"
description = "greenscreens.ai task by Dmitry O"
authors = ["Dmitry O <feakuru@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.0"
numpy = "^2.1.1"
pandas = "^2.2.2"
sqlalchemy = "^2.0.34"
uvicorn = "^0.30.6"
httpx = "^0.27.2"
pyarrow = "^17.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
pytest = "^8.3.3"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
